updated config.ini example file